--- a/_output.yml
+++ b/_output.yml
@@ -7,7 +7,7 @@ bookdown::pdf_book:
   includes:
     in_header: preamble.tex
   latex_engine: xelatex
-  citation_package: natbib
-  keep_tex: yes
+  citation_package: biblatex
+  keep_tex: false
 bookdown::epub_book: default
-output_dir: "docs"
+
